# arxiv_curator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
scripts/: setup_db.py
src/arxiv_curator/: main.py  test_workflow.py
src/arxiv_curator/core/: models.py  workflow_orchestrator.py
src/arxiv_curator/data/: arxiv_client.py  database_repository.py
src/arxiv_curator/presentation/: email_notifier.py  report_formater.py
src/arxiv_curator/prompts/: paper_evaluation_prompt.py  paper_selection_prompt.py  paper_summary_prompt.py
src/arxiv_curator/services/: ai_adapter.py  evaluation_service.py  paper_retriever.py  ranking_service.py  summary_service.py
src/arxiv_curator/templates/: failure_template.html  partial_report_template.html  report_template.html
