[project]
name = "arxiv-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "feedparser>=6.0.12",
    "google-api-python-client>=2.183.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.38.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
